--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "sib-api-v3-sdk": "^8.5.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -29,6 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.2.0"
+    "vite": "^5.3.1"
   }
 }
