--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "sib-api-v3-sdk": "^8.5.0",
     "slick-carousel": "^1.8.1"
   },
